@@ -44,11 +44,11 @@ public class DebugAStarBi extends AStarBidirection implements DebugAlgo {
     }
 
     @Override
-    public void updateBestPath(EdgeIteratorState edgeState, SPTEntry entry, int traversalId, boolean reverse) {
+    public void updateBestPath(EdgeIteratorState edgeState, SPTEntry entry, int traversalKey, boolean reverse) {
         if (g2 != null) {
-            mg.plotNode(g2, traversalId, Color.YELLOW);
+            mg.plotNode(g2, traversalKey, Color.YELLOW);
         }
-        super.updateBestPath(edgeState, entry, traversalId, reverse);
+        super.updateBestPath(edgeState, entry, traversalKey, reverse);
     }
 
     @Override
